# sampleark2

./: .gitignore  Arch01_Human_Focused_PRD.md  Arch02_Technical_Architecture.md  Arch03_Implementation_Plan.md  Arch04_Design_Spec.md  Arch05_Mutation_Spec.md  Arch06_UI_Requirements.md  Arch07_Next_Phase_Plan.md  WIP_UI_Requirements_Mapping.md
.claude/: settings.json
design_handoff_sampleark/: README.md  SampleArk v2.dc.html  SampleArk.dc.html
sampleark-app/: CMakeLists.txt  README.md
sampleark-app/app/: CMakeLists.txt
sampleark-app/app/src/: AudioEngine.cpp  AudioEngine.h  FlatButton.h  FxRack.cpp  FxRack.h  Knob.h  Main.cpp  MainComponent.cpp  MainComponent.h  Panels.cpp  Panels.h  SampleArkLookAndFeel.cpp  SampleArkLookAndFeel.h  Theme.h  Transformer.cpp  Transformer.h  Variations.cpp  Variations.h
sampleark-app/core/: CMakeLists.txt
sampleark-app/core/include/sampleark/: Version.h
sampleark-app/core/src/: Version.cpp
